# velka

./: .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  LICENSE-APACHE  LICENSE-MIT  PRIVACY.md  README.md  README.pt-BR.md  SECURITY.md  action.yml  package.json  tailwind.config.cjs  velka.example.toml
.github/actions/velka-scan/: action.yml
.github/workflows/: auto-release.yml  build-tailwind.yml  ci.yml  extension.yml  publish.yml
benches/: global_scan.rs  scan_bench.rs
docs/: architecture.md  fallback.css  index.html  input.css  package.json  tailwind.config.cjs  tailwind.css  velka.html
docs/_astro/: index.CzrQsn39.css  index.D5leg6_N.css
fuzz/: Cargo.toml
fuzz/fuzz_targets/: ml_target.rs  scan_target.rs
src/: config.rs  error.rs  lib.rs  main.rs  presets.rs
src/cli/: baseline.rs  feedback.rs  hooks.rs  init.rs  mod.rs  rotate.rs  scan.rs
src/domain/: mod.rs  sin.rs
src/engine/: analyzer.rs  ast_analyzer.rs  baseline.rs  bloom.rs  cache.rs  complexity.rs  compliance.rs  dist.rs  feedback.rs  file_reader.rs  honeytoken.rs  iac_analyzer.rs  incremental.rs  k8s.rs  known_examples.rs  lsp.rs  migrate.rs  ml_classifier.rs  mod.rs  necromancer.rs  quarantine.rs  remediate.rs  rules.rs  runtime_scanner.rs  scanner.rs  semantic.rs  structural_validators.rs  vault.rs  verifier.rs
src/output/: formatter.rs  mod.rs  redact.rs  remediation.rs  report.rs
src/ui/: app.rs  mod.rs  widgets.rs
src/utils/: entropy.rs  luhn.rs  mod.rs  strings.rs
tests/: e2e.rs  god_mode_test.rs  integration_test.rs  property_tests.proptest-regressions  property_tests.rs  regression_test.rs  stress_test.rs
vscode-extension/: .vscodeignore  README.md  package-lock.json  package.json  tsconfig.json
vscode-extension/src/: binary.ts  commands.ts  extension.ts  lsp.ts  statusBar.ts  treeView.ts
website/: astro.config.mjs  package-lock.json
website/src/components/: Benchmarks.astro  Features.astro  Footer.astro  Header.astro  Hero.astro  Install.astro  Terminal.astro
website/src/layouts/: Layout.astro
website/src/pages/: index.astro
website/src/styles/: global.css
