[package]
name = "velka"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
ignore = "0.4"
rayon = "1.8"
regex = "1.10"
once_cell = "1.19"
colored = "2.1"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossbeam-channel = "0.5"
git2 = { version = "0.19", default-features = false }
toml = "0.8"
glob = "0.3"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
