[package]
name = "velka"
version = "1.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "The Code Sin Judge - Secret scanner and security analyzer"
readme = "README.md"
keywords = ["security", "secrets", "scanner", "cli"]
categories = ["command-line-utilities", "development-tools"]
repository = "https://github.com/wesllen-lima/velka"
homepage = "https://github.com/wesllen-lima/velka"
documentation = "https://docs.rs/velka"
exclude = ["benches/*", ".github/**", "tests/**"]

[lib]
name = "velka"
path = "src/lib.rs"

[[bin]]
name = "velka"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
ignore = "0.4"
regex = "1.10"
colored = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossbeam-channel = "0.5"
git2 = { version = "0.19", default-features = false }
toml = "0.8"
glob = "0.3"

anyhow = "1.0"
thiserror = "1.0"

indicatif = "0.17"
infer = "0.16"
memmap2 = "0.9"

sha2 = "0.10"
hex = "0.4"
directories = "5.0"

csv = "1.3"
quick-xml = "0.37"
chrono = "0.4"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json"] }

[dev-dependencies]
tempfile = "3.14"
assert_cmd = "2.0"
predicates = "3.1"
criterion = "0.5"

[[bench]]
name = "scan_bench"
harness = false

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
too_many_lines = "allow"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
