[package]
name = "velka"
version = "1.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "The Code Sin Judge - Secret scanner and security analyzer"
readme = "README.md"
keywords = ["security", "secrets", "scanner", "cli"]
categories = ["command-line-utilities", "development-tools"]
repository = "https://github.com/wesllen-lima/velka"
homepage = "https://github.com/wesllen-lima/velka"
documentation = "https://docs.rs/velka"
exclude = ["benches/*", ".github/**", "tests/**", "docs/**", "package.json", "tailwind.config.cjs", "docs/input.css", "docs/tailwind.css", "docs/og-image.svg", "docs/og-image.png"]

[lib]
name = "velka"
path = "src/lib.rs"

[[bin]]
name = "velka"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
clap_complete = "4.4"
ignore = "0.4"
regex = "1.10"
colored = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossbeam-channel = "0.5"
git2 = { version = "0.20", default-features = false }
toml = "0.8"
glob = "0.3"

anyhow = "1.0"
thiserror = "1.0"

indicatif = "0.17"
infer = "0.16"
memmap2 = "0.9"

sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
hmac = "0.12"
directories = "5.0"
dirs = "5.0"

csv = "1.3"
quick-xml = "0.37"
chrono = "0.4"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json"] }
fs2 = "0.4"
tempfile = "3.14"
rayon = "1.10"
bincode = "1.3"
num_cpus = "1.16"
notify = "6.1"
serde_yaml = "0.9"
rand = "0.8"
tower-lsp = "0.20"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "fs", "process", "time"] }
ratatui = "0.30"
crossterm = "0.28"
syntect = { version = "5.2", default-features = false, features = ["default-fancy"] }

# Sprint 8: Cloud-Native
axum = "0.7"
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "service"] }
tokio-rustls = "0.25"
rustls = "0.22"
rustls-pemfile = "2"
tokio-util = { version = "0.7", features = ["io"] }
tokio-stream = "0.1"
bytes = "1"

[dev-dependencies]
tempfile = "3.14"
assert_cmd = "2.0"
predicates = "3.1"
criterion = "0.5"

[[bench]]
name = "scan_bench"
harness = false

[[bench]]
name = "global_scan"
harness = false

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
too_many_lines = "allow"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

# Config for 'cargo dist'
[workspace.metadata.dist]
# CI backends to support
ci = "github"
# Target platforms
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "aarch64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
]
# Installers to generate
installers = ["shell", "powershell"]
# Whether to auto-include README/LICENSE/CHANGELOG
auto-includes = true
