[package]
name = "velka-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.velka]
path = ".."

[[bin]]
name = "scan_target"
path = "fuzz_targets/scan_target.rs"
doc = false

[[bin]]
name = "ml_target"
path = "fuzz_targets/ml_target.rs"
doc = false
